[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["zacksatylgan <166334246+zacksatylgan@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
numpy = "^1.26.4"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
